--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,10 @@ dependencies:
   intl: ^0.20.2
   path_provider: ^2.1.5
 
-#  # Firebase
-#  firebase_core: ^3.6.0
-#  firebase_auth: ^5.3.0
-#  cloud_firestore: ^5.4.4
+  # Firebase
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.0
+  cloud_firestore: ^5.4.4
 
 dev_dependencies:
   flutter_test:
